# Library-Manage-System-with-Standard-C

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
.github/workflows/: gitee-repos-sync.yml
core/: book.c  book.h  lbr.c  lbr.h  user.c  user.h
util/: hash.c  hash.h  hash_map.c  hash_map.h  list.c  list_book.h  list_user.h  my_math.c  my_math.h  my_string.c  my_string.h
